Trying out some cards, Need to fix my theme. dark mode. Need to fix my scss Fix responsivness

--- a/src/components/headline/Headline.scss
+++ b/src/components/headline/Headline.scss
@@ -2,11 +2,14 @@
 .headline {
     position: relative;
     margin: 20rem auto 3rem;
-    font-family: $font-alt;
-    color: $color-black;
     font-size: 3rem;
     font-weight: 800;
     text-align: center;
+
+    >h1 {
+        font-family: $font-alt;
+        color: $color-black;
+    }
 
     @media screen and (min-width: 768px) {
         margin: 15rem auto 1rem;
