--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,6 +2,15 @@
     width: 100%;
     height: 100%;
 
+    >.svg_container {
+        max-width: 100%;
+       
+        @media screen and (min-width: 768px) {
+           
+        } 
+    }
+
+
     > .bottom {
         height: 150vh;
         width: 100%;
