--- a/src/styles/components/Nav.module.scss
+++ b/src/styles/components/Nav.module.scss
@@ -1,4 +1,4 @@
-@use '../base/' as *;
+@use "../base/" as *;
 .navbar {
   position: relative;
   margin: 0;
@@ -9,7 +9,7 @@
   display: flex;
   font-size: 1.2rem;
   background-color: rgb(0, 0, 0);
-  overflow-x: hidden;  
+  overflow-x: hidden;
 }
 
 .hide {
@@ -42,11 +42,9 @@
   overflow: hidden;
   transition: all 0.4s ease;
 
-  
-&:last-child {
-  padding-right: 4rem;
-}
-
+  &:last-child {
+    padding-right: 4rem;
+  }
 }
 
 .nav_item {
@@ -85,23 +83,19 @@ a .mobile {
     padding: 0.025rem;
     margin-right: 0.15rem;
     margin-top: 0.1rem;
-  }  
+  }
 
   > span {
     position: relative;
-    font-family: $font-nav;
+    font-family: $font-alt;
     text-shadow: 1px 1px 1px black;
     pointer-events: none;
-
-    
-    
   }
-  
-  @media screen and (max-width: 1440px){
+
+  @media screen and (max-width: 1440px) {
     font-size: 1rem;
   }
 }
-
 
 .svg {
   position: absolute;
@@ -124,7 +118,7 @@ a .mobile {
 .nav_item:hover {
   background: transparent;
 
- & .nav_links {
+  & .nav_links {
     color: rgb(107, 107, 107);
   }
   & .anicircle {
@@ -132,17 +126,16 @@ a .mobile {
   }
 
   .link_icon {
-     
     transform: rotate(0.2deg) translateX(-2px);
     svg path {
       fill: $color-4;
     }
-  }  
-} 
+  }
+}
 
 @media screen and (max-width: 1440px) {
   .nav_menu {
-    margin-right: 1rem;    
+    margin-right: 1rem;
   }
 }
 
@@ -150,11 +143,11 @@ a .mobile {
   .navbar {
     position: fixed;
     top: 0;
-    left: 0; 
+    left: 0;
     max-width: 100vw;
   }
 
-  .menu_btn {    
+  .menu_btn {
     position: fixed;
     top: 2vh;
     right: 5vw;
@@ -173,7 +166,6 @@ a .mobile {
     &:hover {
       background-color: lighten($color-2, 10%);
     }
-    
   }
 
   .svg {
@@ -182,8 +174,7 @@ a .mobile {
   .nav_icon {
     color: $color-white;
     font-size: 2rem;
-  } 
-   
+  }
 
   .nav_menu {
     position: fixed;
@@ -206,14 +197,16 @@ a .mobile {
     .nav_item {
       left: 30vw;
       height: fit-content;
+      width: 100%;
     }
 
     .nav_links {
       padding: 1rem 2rem 1rem 0rem;
       border-radius: 2px;
-      display: block;
+      display: inline-block;
+      width: 100%;
+      color: $color-4;
     }
-
   }
 
   .nav_menu.active {
@@ -232,34 +225,25 @@ a .mobile {
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1000;
-
   }
   .nav_item a:before {
-   opacity: 0;  
+    opacity: 0;
   }
-
 }
 
-@media (min-width: 769px) and 
-       (max-width: 1024px) and 
-       (-webkit-min-device-pixel-ratio: 2),
-       (min-width: 769px) and 
-       (max-width: 1024px) and 
-       (min-resolution: 192dpi) {
-        .menu_btn {
-          top: 8rem;
-          right: 2rem;
-          &:hover {
-            background-color: lighten($color-client-2, 5%);
-          }
-          
-        }
+@media (min-width: 769px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 2),
+  (min-width: 769px) and (max-width: 1024px) and (min-resolution: 192dpi) {
+  .menu_btn {
+    top: 8rem;
+    right: 2rem;
+    &:hover {
+      background-color: lighten($color-client-2, 5%);
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
-   
   .nav_menu {
-
     .nav_item {
       left: 10vw;
       padding: 0 0.5rem;
@@ -267,28 +251,32 @@ a .mobile {
     }
 
     .nav_item:nth-child(1) {
-      margin-top: 8rem;
+      margin-top: 4rem;
     }
 
     .nav_links {
-      width: 40%;
-      font-size: $font-size-base;
-      
+      width: 100%;
+      font-size: $font-size-l;
+      display: flex;
+      flex-direction: row-reverse;
+      >span {
+        padding: 0 0.5rem;
+      }
+      >span:nth-of-type(1) {
+        color: #888;
+      }
     }
 
     .nav_links:hover {
-      background-color: $color-client-3;
-      color: $color-1;
+      color: $color-3;
     }
   }
   .nav_item a:before {
-   opacity: 0;  
+    opacity: 0;
   }
 }
 @media screen and (max-width: 360px) {
-
   .nav_menu {
-
     .nav_item {
       left: 1vw;
     }
@@ -311,7 +299,6 @@ a .mobile {
     }
   }
   .nav_item a:before {
-   opacity: 0;  
+    opacity: 0;
   }
-  
 }
